apps/the-project/overlays/prod/broadcaster-patch.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: broadcaster-dep
spec:
  template:
    spec:
      containers:
      - name: broadcaster
